[gd_scene load_steps=31 format=2]

[ext_resource path="res://assets/yusong.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Perfect DOS VGA 437 Win.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/yusong_walk.png" type="Texture" id=4]
[ext_resource path="res://assets/yusong_idle.png" type="Texture" id=5]
[ext_resource path="res://addons/teeb.text_effects/resources/Nervous.tres" type="RichTextEffect" id=6]
[ext_resource path="res://addons/teeb.text_effects/resources/UwU.tres" type="RichTextEffect" id=7]
[ext_resource path="res://assets/yusong_talking.png" type="Texture" id=8]
[ext_resource path="res://addons/teeb.text_effects/resources/Sparkle.tres" type="RichTextEffect" id=11]
[ext_resource path="res://addons/teeb.text_effects/resources/Woo.tres" type="RichTextEffect" id=12]
[ext_resource path="res://addons/teeb.text_effects/resources/Rain.tres" type="RichTextEffect" id=13]
[ext_resource path="res://addons/teeb.text_effects/resources/Number.tres" type="RichTextEffect" id=15]
[ext_resource path="res://addons/teeb.text_effects/resources/ColorMod.tres" type="RichTextEffect" id=17]
[ext_resource path="res://addons/teeb.text_effects/resources/Cuss.tres" type="RichTextEffect" id=18]
[ext_resource path="res://addons/teeb.text_effects/resources/Jump.tres" type="RichTextEffect" id=19]
[ext_resource path="res://addons/teeb.text_effects/resources/L33T.tres" type="RichTextEffect" id=20]
[ext_resource path="res://addons/teeb.text_effects/resources/Heart.tres" type="RichTextEffect" id=21]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 53 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 53 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 53 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 21, 54 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 21, 0, 21, 54 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 42, 0, 21, 54 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "talking",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 19 )

[sub_resource type="DynamicFont" id=3]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Speechtext:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "hide_text"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Speechtext:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "reset_speech"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "show_text"
tracks/0/type = "value"
tracks/0/path = NodePath("Speechtext:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("SpeechTimer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -1 ],
"method": "start"
} ]
}

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "walk"
frame = 1
playing = true

[node name="InteractBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractBox"]
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 0, 8 )
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_v_enabled = true
smoothing_speed = 10.0
drag_margin_top = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="PlayerSpeech" type="Node2D" parent="."]
pause_mode = 2
z_index = 10

[node name="Speechtext" type="RichTextLabel" parent="PlayerSpeech"]
margin_left = 10.0
margin_top = -32.0
margin_right = 94.0
margin_bottom = -4.0
rect_clip_content = false
mouse_filter = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
visible_characters = 0
percent_visible = 0.0
fit_content_height = true
custom_effects = [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 6 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 12 ) ]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerSpeech"]
anims/RESET = SubResource( 5 )
anims/hide_text = SubResource( 6 )
anims/show_text = SubResource( 4 )

[node name="SpeechTimer" type="Timer" parent="PlayerSpeech"]
one_shot = true

[connection signal="timeout" from="PlayerSpeech/SpeechTimer" to="." method="_on_SpeechTimer_timeout"]
